Move from project pages common methods and locators to BaseProjectPage. (#1672)
* rf project pages

* PipelineProjectPage -> BaseProjectPage

* FolderProjectPage -> BaseProjectPage

* Rename/Move/Delete -> FolderProjectPage, HomePage, BaseProjectPage

* remove rename pages

* remove move/delete pages

* rm RenameDialogPage.java

* rf down tests

* rf down tests

* resolve conflicts

* resolve conflicts

* resolve conflicts and code styles

* resolve conflicts and code styles

* rf BaseProjectPage

* rm some dependencies from FolderTest